// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for state: error, hasAction: false and hasClose: false 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: var(--p-color-error-frosted) !important;
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

@media (forced-colors: active) {
  :host {
    outline: 2px solid CanvasText !important;
    outline-offset: -2px !important;
  }
}

.heading {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: var(--p-color-primary);
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0.5;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: false and hasClose: false 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: var(--p-color-info-frosted) !important;
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

@media (forced-colors: active) {
  :host {
    outline: 2px solid CanvasText !important;
    outline-offset: -2px !important;
  }
}

.heading {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: var(--p-color-primary);
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0.5;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: false and hasClose: true 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: var(--p-color-info-frosted) !important;
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

@media (forced-colors: active) {
  :host {
    outline: 2px solid CanvasText !important;
    outline-offset: -2px !important;
  }
}

.heading {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: var(--p-color-primary);
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0.5;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: true and hasClose: false 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: var(--p-color-info-frosted) !important;
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto !important;
  }
}

@media (forced-colors: active) {
  :host {
    outline: 2px solid CanvasText !important;
    outline-offset: -2px !important;
  }
}

.heading {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: var(--p-color-primary);
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  margin-top: 2px;
}
.action {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0.5;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info, hasAction: true and hasClose: true 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) auto !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: var(--p-color-info-frosted) !important;
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto auto !important;
  }
}

@media (forced-colors: active) {
  :host {
    outline: 2px solid CanvasText !important;
    outline-offset: -2px !important;
  }
}

.heading {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: var(--p-color-primary);
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  margin-top: 2px;
}
.action {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0.5;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
  .action {
    grid-row-start: 2;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: success, hasAction: false and hasClose: false 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: var(--p-color-success-frosted) !important;
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

@media (forced-colors: active) {
  :host {
    outline: 2px solid CanvasText !important;
    outline-offset: -2px !important;
  }
}

.heading {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: var(--p-color-primary);
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0.5;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: warning, hasAction: false and hasClose: false 1`] = `
":host {
  display: grid;
  grid-template-columns: minmax(auto, 1fr) !important;
  gap: 16px !important;
  place-items: start !important;
  padding: 16px !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  background: var(--p-color-warning-frosted) !important;
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-xl)) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset !important;
}
slot[name="heading"] {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) !important;
  }
}

@media (forced-colors: active) {
  :host {
    outline: 2px solid CanvasText !important;
    outline-offset: -2px !important;
  }
}

.heading {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  color: var(--p-color-primary);
}
.description {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  margin: 0;
  color: var(--p-color-primary);
}
.icon {
  margin-top: 2px;
}
.content {
  display: grid;
  gap: 4px;
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0.5;
}
@media(min-width:760px) {
  .content {
    margin-left: -8px;
  }
}

@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;
